Scrubber: Prevent turn numbers from overflowing

--- a/less/scrubber.less
+++ b/less/scrubber.less
@@ -40,6 +40,7 @@
 	width: 100%;
 	border: solid @scrubber-inactive-border-width @scrubber-inactive-border-color;
 	color: white;
+	overflow: hidden;
 
 	&:not(.no-turns) {
 		border-top: none;
